--- a/backend/package.json
+++ b/backend/package.json
@@ -15,8 +15,11 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "mongoose": "^8.8.4"
+    "google-search-results-nodejs": "^2.1.0",
+    "mongoose": "^8.8.4",
+    "serpapi": "^2.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
